// Copyright 2017 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// Types defined here are for use in referenced from other proto files in the
// same internal/ package.
package internal.types;

// Trigger is task.Trigger equivalent.
message Trigger {
  string id = 1;
  string job_id = 2;
  int64 invocation_id = 3;
  int64 created = 4;
  string title = 5;
  string url = 6;
  bytes payload = 7;
}
